--- a/Assignment 1/xv6-os-assig1.1/Makefile
+++ b/Assignment 1/xv6-os-assig1.1/Makefile
@@ -174,9 +174,10 @@ UPROGS=\
 	_usertests\
 	_wc\
 	_zombie\
-#	_assig1_1\
-#	_assig1_3\
-#	_assig1_5\
+	_user_toggle\
+	_assig1_1\
+	_assig1_3\
+	_assig1_5\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -244,6 +245,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 # check in that version.
 
 EXTRA=\
+	user_toggle.c\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c\
 	printf.c umalloc.c\
