Added more testcases and their output

--- a/Assignment 2/xv6-os-assig2.0/Makefile
+++ b/Assignment 2/xv6-os-assig2.0/Makefile
@@ -179,6 +179,8 @@ UPROGS=\
 	_assig2_2\
 	_assig2_3\
 	_assig2_4\
+	_assig2_5\
+	_assig2_6\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
