Added testing scripts

--- a/Assignment 3/xv6-os-assig3.0/Makefile
+++ b/Assignment 3/xv6-os-assig3.0/Makefile
@@ -149,6 +149,14 @@ _forktest: forktest.o $(ULIB)
 	$(LD) $(LDFLAGS) -N -e main -Ttext 0 -o _forktest forktest.o ulib.o usys.o
 	$(OBJDUMP) -S _forktest > forktest.asm
 
+_uthread: uthread.o uthread_switch.o
+	$(LD) $(LDFLAGS) -N -e main -Ttext 0 -o _uthread uthread.o uthread_switch.o $(ULIB)
+	$(OBJDUMP) -S _uthread > uthread.asm
+
+_assig3_1: assig3_1.o uthread_switch.o
+	$(LD) $(LDFLAGS) -N -e main -Ttext 0 -o _assig3_1 assig3_1.o uthread_switch.o $(ULIB)
+	$(OBJDUMP) -S _assig3_1 > assig3_1.asm
+
 mkfs: mkfs.c fs.h
 	gcc -Werror -Wall -o mkfs mkfs.c
 
@@ -174,9 +182,8 @@ UPROGS=\
 	_usertests\
 	_wc\
 	_zombie\
-#	_assig1_1\
-#	_assig1_3\
-#	_assig1_5\
+	_uthread\
+	_assig3_1\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
